--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CS3300 Portfolio Project</title>
+    <title>Log in</title>
 
   </head>
   
@@ -31,3 +31,4 @@
     </div>
   </body>
 </html>
+
