--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,47 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<p style="color: green"><%= notice %></p>
 
+<%= render @project %>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+<div>
+  <%= link_to "Edit this project", edit_project_path(@project) %> |
+  <%= link_to "Back to projects", projects_path %>
 
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
-  </head>
-
-  <body class="text-center bg-dark">
-  
-      <main role="main" class="inner cover text-light">
-        <h1 class="cover-heading"><%= @project.title %></h1>
-        <p class="lead text-left">Project Details: </p>
-        <p class="lead text-left">-----------------</p>
-        <p class="lead text-left"> <%= @project.description %>
-        
-          
-        </p>
-      </main>
-
-      
-    </div>
-
-
-
-
-
-
-
-<p id="notice"><%= notice %></p>
-
-
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+  <%= button_to "Destroy this project", @project, method: :delete %>
+</div>
