--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
   
   <body>
     <div style="margin: 5% 0 0 10%;">
-    <h1>Projects</h1>   
+    <h1>Projects</h1> 
     <h1>CS 3300 Portfolio Project - Fall 2022</h1>
 
       <div style="padding-left: 2rem;">
@@ -24,7 +24,8 @@
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
         
         <% else %>
-          <a href="/users/sign_in"> Sign in</a>
+          <a href="http://localhost:3000/users/sign_in"> Sign in</a>
+          <a href="http://localhost:3000/users/sign_up"> <span style="border: 1px solid black">Sign up</span></a>
         <% end %>
 
       </div>
