--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,8 +24,8 @@
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
         
         <% else %>
-          <a href="http://localhost:3000/users/sign_in"> Sign in</a>
-          <a href="http://localhost:3000/users/sign_up"> <span style="border: 1px solid black">Sign up</span></a>
+          <a href="http://localhost:3000/users/sign_in"> <span style="border: 2px solid black;font-weight:bold">Sign in</span></a>
+          <a href="http://localhost:3000/users/sign_up"> <span style="border: 2px solid black;font-weight:bold;">Sign up</span></a>
         <% end %>
 
       </div>
