--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,12 +1,16 @@
 <div id="<%= dom_id project %>">
   <p>
-    <strong>Title:</strong>
-    <%= project.title %>
+    <span style="border: 2px solid black;font-weight:bold;">
+      <strong>Title:</strong>
+      <%= project.title %>
+    </span>
   </p>
 
   <p>
-    <strong>Description:</strong>
-    <%= project.description %>
+    <span style="border: 1px solid black;font-weight:ariel;">
+      <strong>Description:</strong>
+      <%= project.description %>
+    </span>
   </p>
 
 </div>
