--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,8 @@
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
 <h1>Editing project</h1>
 
 <%= render "form", project: @project %>
@@ -5,6 +10,10 @@
 <br>
 
 <div>
-  <%= link_to "Show this project", @project %> |
-  <%= link_to "Back to projects", projects_path %>
+  <table style="width:100%">
+    <tr>
+      <td><%= link_to "Show this project", @project %></td>
+      <td><%= link_to "Back to projects", projects_path %></td>
+    </tr>
+  </table>
 </div>
