--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -10,10 +10,8 @@ table, th, td {
 <br>
 
 <div>
-  <table style="width:100%">
-    <tr>
+  <span style="border: 2px solid black;font-weight:bold;background-color:lightgreen">
       <td><%= link_to "Show this project", @project %></td>
       <td><%= link_to "Back to projects", projects_path %></td>
-    </tr>
-  </table>
+  </span>
 </div>
