--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,5 +5,7 @@
 <br>
 
 <div>
-  <%= link_to "Back to projects", projects_path %>
+  <span style="border: 2px solid black;font-weight:bold;background-color:lightgreen">
+    <%= link_to "Back to projects", projects_path %>
+  </span>
 </div>
