--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,17 @@
+<style>
+table, th, td {
+  border:1px solid black;
+  background-color:lightgreen;
+}
+</style>
 <p style="color: green"><%= notice %></p>
 
 <%= render @project %>
 
 <div>
-  <%= link_to "Edit this project", edit_project_path(@project) %> |
-  <%= link_to "Back to projects", projects_path %>
-
+  <span style="border: 2px solid black;font-weight:bold;background-color:lightgreen">
+    <%= link_to "Edit this project", edit_project_path(@project) %> |
+    <%= link_to "Back to projects", projects_path %>
+  </span>
   <%= button_to "Destroy this project", @project, method: :delete %>
 </div>
